[package]
name = "unaf-svr"
description = "U.N.A.F.; [U]SAGI.[N]ETWORK [A]pplication [F]ramework :: [S]er[v]e[r] module"
version = "0.0.0-alphpa.0"
edition = "2021"
authors = ["USAGI.NETWORK / Usagi Ito <the@usagi.network>"]
license = "MIT"
repository = "https://github.com/usagi/unaf-svr"
categories = ["web-programming::http-server"]
keywords = ["unaf", "server", "app-framework", "usagi-network", "web"]
documentation = "https://docs.rs/unaf-svr/"

[dependencies]
# actix-files = "0.6.0"
actix-web = "4.0.1"
actix-web-tonic = "1.0.0"
either = "1.6.1"
# async-trait = "0.1.53"
futures = "0.3.21"
futures-util = "0.3.21"
log = "0.4.17"
mime = "0.3.16"
once_cell = "1.10.0"
# num_cpus = "1.13.1"
# prost = "0.10.3"
retrieve = "1.1.1"
rmp-serde = "1.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
toml = "0.5.9"

# tia = "1.0.3"
# tonic = "0.7.2"
[build-dependencies]
# tonic-build = "0.7"
# build-pretty = "1.0.0"
# once_cell = "1.10.0"
